conf/iptables.txt
# Generated by iptables-save v1.4.21 on Mon Jun 20 18:50:16 2016
*nat
:PREROUTING ACCEPT [23:2094]
:INPUT ACCEPT [13:1502]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o wlan1 -j MASQUERADE
-A POSTROUTING -o wlan1 -j MASQUERADE
-A POSTROUTING -o wlan1 -j MASQUERADE
-A POSTROUTING -o wlan1 -j MASQUERADE
COMMIT
# Completed on Mon Jun 20 18:50:16 2016
# Generated by iptables-save v1.4.21 on Mon Jun 20 18:50:16 2016
*filter
:INPUT ACCEPT [8:919]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [17:1909]
-A FORWARD -i wlan1 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o wlan1 -j ACCEPT
-A FORWARD -i wlan1 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o wlan1 -j ACCEPT
-A FORWARD -i wlan1 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o wlan1 -j ACCEPT
-A FORWARD -i wlan1 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o wlan1 -j ACCEPT
COMMIT
# Completed on Mon Jun 20 18:50:16 2016
